Fixed a z-index problem on the popup windows.

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ padding-bottom:6%;
 #about, #hidden-seat{           
     border:1px solid #d9d9d9;
     box-shadow: 3px 3px 3px #888888;
-    z-index:1000;
+    z-index:3000;
     position:fixed;
     top:10%;
     height:560px;
